--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout}">
+      layout:decorate="~{layout}" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
@@ -22,7 +22,7 @@
     <p class="invisible">You searched for: <span id="searchTerm"></span></p>
     <p class="invisible text-danger" id="bookSearchErrorMessage">Sorry, we are facing some problems! Please try again
       later.</p>
-    <table class="table">
+    <table class="table" sec:authorize="hasAuthority('VIEW_BOOKS_LIST')">
       <thead>
       <tr>
         <th scope="col">#</th>
@@ -42,7 +42,7 @@
       </tr>
       </tbody>
     </table>
-    <a href="/create-form">Add book</a>
+    <a sec:authorize="hasAuthority('CREATE_BOOK')" href="/create-form">Add book</a>
   </div>
   <template id="row-template">
     <tr>
